crates/search-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__minimal_rule_round_trip.snap
---
source: crates/indexsearch-types/src/dynamic_search_rules.rs
expression: expected
---
{
  "uid": "simple-rule",
  "active": false,
  "conditions": [],
  "actions": [
    {
      "selector": {
        "id": "42"
      },
      "action": {
        "type": "pin",
        "position": 1
      }
    }
  ]
}
