crates/search-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__pin.snap
---
source: crates/indexsearch-types/src/dynamic_search_rules.rs
expression: action
---
{
  "type": "pin",
  "position": 5
}
