crates/search-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__query.snap
---
source: crates/indexsearch-types/src/dynamic_search_rules.rs
expression: condition
---
{
  "scope": "query",
  "isEmpty": true
}
