crates/search-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__time_end.snap
---
source: crates/indexsearch-types/src/dynamic_search_rules.rs
expression: condition
---
{
  "scope": "time",
  "end": "2025-12-31T23:59:59Z"
}
