crates/search-types/src/snapshots/meilisearch_types__dynamic_search_rules__tests__time_start.snap
---
source: crates/indexsearch-types/src/dynamic_search_rules.rs
expression: condition
---
{
  "scope": "time",
  "start": "2025-01-01T00:00:00Z"
}
